Allow /cron to only be used locally.

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,16 @@ http {
         require("lapis").serve("app")
       ';
     }
-
+	
+	location /cron {
+		allow 127.0.0.1;
+		deny all;
+		default_type text/html;
+		content_by_lua '
+			require("lapis").serve("app")
+		';
+	}
+	
     location /static/ {
       alias static/;
     }
