--- a/nginx.conf
+++ b/nginx.conf
@@ -11,9 +11,17 @@ http {
   include mime.types;
 
   server {
+	error_page 400 403 /error_400;
     listen ${{PORT}};
     lua_code_cache ${{CODE_CACHE}};
-
+	
+	location /error_400 {
+		default_type text/html;
+		content_by_lua '
+			require("lapis").serve("noperms")
+		';
+	}
+	
     location / {
       default_type text/html;
       content_by_lua '
